# openhd-kernel

./: .gitignore  CmakeLists.txt  README.md  README_mingw64.md  main.cpp  meson.build
conf/: openhd_config.properties
lib/geodesic/: CMakeLists.txt  meson.build
lib/h264/: CMakeLists.txt  h264_bitstream_parser.cc  meson.build  sps_vui_rewriter.cc  sps_vui_rewriter.h
lib/mavlink-headers/: README.md  generate.sh
lib/mavlink-headers/mavlink/v2.0/ardupilotmega/: ardupilotmega.h  mavlink.h  version.h
lib/mavlink-headers/mavlink/v2.0/common/: common.h  mavlink.h  version.h
lib/mavlink-headers/mavlink/v2.0/csAirLink/: csAirLink.h  mavlink.h  version.h
lib/mavlink-headers/mavlink/v2.0/cubepilot/: cubepilot.h  mavlink.h  version.h
lib/mavlink-headers/mavlink/v2.0/icarous/: icarous.h  mavlink.h  version.h
lib/mavlink-headers/mavlink/v2.0/minimal/: mavlink.h  minimal.h  version.h
lib/mavlink-headers/mavlink/v2.0/openhd/: mavlink.h  mavlink_msg_openhd_camera_status_air.h  mavlink_msg_openhd_onboard_computer_status_extension.h  mavlink_msg_openhd_stats_monitor_mode_wifi_card.h  mavlink_msg_openhd_stats_monitor_mode_wifi_link.h  mavlink_msg_openhd_stats_telemetry.h  mavlink_msg_openhd_stats_wb_video_air.h  mavlink_msg_openhd_stats_wb_video_air_fec_performance.h  mavlink_msg_openhd_stats_wb_video_ground.h  mavlink_msg_openhd_stats_wb_video_ground_fec_performance.h  mavlink_msg_openhd_sys_status1.h  mavlink_msg_openhd_version_message.h  mavlink_msg_openhd_wifbroadcast_analyze_channels_progress.h  mavlink_msg_openhd_wifbroadcast_gnd_operating_mode.h  mavlink_msg_openhd_wifbroadcast_scan_channels_progress.h  mavlink_msg_openhd_wifbroadcast_supported_channels.h  openhd.h  testsuite.h  version.h
lib/mavlink-headers/mavlink/v2.0/standard/: mavlink.h  standard.h  version.h
lib/mavlink-headers/mavlink/v2.0/uAvionix/: mavlink.h  uAvionix.h  version.h
src/: CmakeLists.txt
src/common/: CMakeLists.txt  SchedulingHelper.hpp  TimeHelper.hpp  util_fs.h
src/logging/: CMakeLists.txt  hudlogmessagesmodel.cpp  hudlogmessagesmodel.h  loghelper.h  logmessagesmodel.cpp  logmessagesmodel.h  meson.build
src/settings/: CMakeLists.txt  Settings.cpp  Settings.h  meson.build
src/telemetry/: CMakeLists.txt  MavlinkTelemetry.cpp  MavlinkTelemetry.h  meson.build
src/telemetry/action/: fcaction.cpp  fcaction.h  fcmissionhandler.cpp  fcmissionhandler.h  fcmsgintervalhandler.cpp  fcmsgintervalhandler.h  ohdaction.cpp  ohdaction.h
src/telemetry/action/impl/: cmdsender.cpp  xparam.cpp
src/telemetry/connection/: tcp_connection.cpp  udp_connection.cpp
src/telemetry/models/: aohdsystem.cpp  aohdsystem.h  camerastreammodel.cpp  camerastreammodel.h  fcmapmodel.cpp  fcmapmodel.h  fcmavlinkmissionitemsmodel.cpp  fcmavlinkmissionitemsmodel.h  fcmavlinksystem.cpp  fcmavlinksystem.h  markermodel.cpp  markermodel.h  rcchannelsmodel.cpp  rcchannelsmodel.h  wificard.cpp  wificard.h
src/telemetry/models/openhd_core/: camera.hpp  platform.hpp
src/telemetry/settings/: documentedparam.cpp  frequencyhelper.cpp  frequencyhelper.h  improvedintsetting.cpp  improvedintsetting.h  improvedstringsetting.cpp  improvedstringsetting.h  mavlinksettingsmodel.cpp  mavlinksettingsmodel.h  pollutionhelper.cpp  pollutionhelper.h  wblinksettingshelper.cpp  wblinksettingshelper.h  wifi_channel.h
src/telemetry/tutil/: geodesi_helper.cpp  mavlink_enum_to_string.h  qopenhdmavlinkhelper.hpp  telemetryutil.hpp
src/timer/: Timer.h
src/util/: CMakeLists.txt  WorkaroundMessageBox.cpp  WorkaroundMessageBox.h  color.h  meson.build  mousehelper.cpp  mousehelper.h  qopenhd.cpp  qopenhd.h  qrenderstats.cpp  qrenderstats.h  restartqopenhdmessagebox.cpp  restartqopenhdmessagebox.h  time_utils.cpp  time_utils.h
src/videostreaming/: CMakeLists.txt  meson.build
src/videostreaming/android/: qandroidmediaplayer.cpp  qandroidmediaplayer.h
src/videostreaming/avcodec/: avcodec_decoder.cpp  avcodec_decoder.h  texturerenderer.cpp  texturerenderer.h
src/videostreaming/avcodec/gl/: gl_videorenderer.cpp  gl_videorenderer.h  glhelp.h
src/videostreaming/vscommon/: ExternalDecodeService.hpp  OpenHDVideoHelper.hpp  decodingstatistcs.cpp  decodingstatistcs.h
src/videostreaming/vscommon/custom/: rawreceiver.h
src/videostreaming/vscommon/nalu/: CodecConfigFinder.hpp  NALU.hpp
src/videostreaming/vscommon/rtp/: ParseRTP.cpp  RTP.hpp  rtpreceiver.cpp
src/videostreaming/vscommon/udp/: UDPReceiver.cpp  UDPReceiver.h
