

openhd_kernel_telemetry_lib = static_library(
  'openhd_kernel_telemetry_lib',
  'MavlinkTelemetry.cpp',
  './connection/udp_connection.cpp',
  './connection/tcp_connection.cpp',
  './action/impl/cmdsender.cpp',
  './action/impl/xparam.cpp',
  './action/fcaction.cpp',
  './action/fcmsgintervalhandler.cpp',
  './action/fcmissionhandler.cpp',
  './action/ohdaction.cpp',
  './settings/mavlinksettingsmodel.cpp',
  './settings/documentedparam.cpp',
  './settings/improvedstringsetting.cpp',
  './settings/improvedintsetting.cpp',
  './settings/wblinksettingshelper.cpp',
  './settings/pollutionhelper.cpp',
  './settings/frequencyhelper.cpp',
  './models/camerastreammodel.cpp',
  './models/fcmavlinksystem.cpp',
  './models/fcmavlinkmissionitemsmodel.cpp',
  './models/rcchannelsmodel.cpp',
  './models/aohdsystem.cpp',
  './models/wificard.cpp',
  './tutil/geodesi_helper.cpp',
  dependencies: []
)